# gps-toolchain

./: .gitignore  README.md  autogps.py  pyproject.toml  requirements.txt  setup.py
scripts/CaptureOne/: 10 Geotag from GPS.applescript  11 Geotag from file.applescript  99 Geocode XMPs.applescript  Clear GPS content.applescript  Geotag from GPS.applescript
