[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gps-toolchain"
version = "0.3"
description = "Reverse geocoding library for photos"
authors = [
    {name = "Benjamin Bezine"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.5",
    "Topic :: Multimedia"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bezineb5/gps-toolchain"
Repository = "https://github.com/bezineb5/gps-toolchain.git"

[tool.setuptools]
py-modules = ["autogps"] 